# agents-in-everyday-work

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py  chat.py
backend/app/routes/: __init__.py  chat.py
backend/app/services/: __init__.py  gemini_service.py  tools.py
frontend/: .dockerignore  Dockerfile  env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: ChatConfig.tsx  ChatHeader.tsx  ChatInterface.tsx  ConnectionStatus.tsx  MessageInput.tsx  MessageList.tsx
frontend/src/hooks/: useChat.ts
frontend/src/types/: chat.ts
frontend/src/utils/: api.ts
